@@ -1,4 +1,8 @@
 2015-06-17  Benno Schulenberg  <bensberg@justemail.net>
+	* src/rcfile.c: Allow a tiny nano's ~/.nanorc to enable search and
+	position histories.  Also sort the options more strictly.
+
+2015-06-17  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_undo, add_undo): When undoing a Backspace at the tail
 	of the file and nonewlines is not set, then don't add another newline
 	but just reposition the cursor.  Also, when doing a Delete at the tail
